last commit before CRAN submission

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -3,7 +3,7 @@
 Version 0.5 (2014-09-22)
 -----------
 
-* Major new release, so version number bumped from 0.3 to 0.5
+* Major new release, so version number bumped from 0.3 to 0.5.
 
 * New package vignettes: a user guide and a vignette of examples.
 
