Bug fix in tcovs option in semi-Markov model simulation

--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -124,11 +124,11 @@
 @Article{stacy:gengamma,
   author = 	 {Stacy, E. W.},
   title = 	 {A generalization of the gamma distribution.},
-  journal = 	 {Annals of Mathematical Statistics},
+  journal = 	 {The Annals of Mathematical Statistics},
   year = 	 {1962},
   OPTkey = 	 {},
-  OPTvolume = 	 {},
-  number =	 {33},
+  volume =	 {33},
+  number =	 {3},
   pages =	 {1187-92},
   OPTmonth = 	 {},
   OPTnote = 	 {},
@@ -246,7 +246,7 @@
 @article{yee:wild,
   title={Vector generalized additive models},
   author={Yee, T. W. and Wild, C. J.},
-  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  journal={Journal of the Royal Statistical Society B},
   pages={481--493},
   year={1996},
   publisher={JSTOR}
@@ -260,7 +260,7 @@
   number={5},
   pages={2139--2160},
   year={2013},
-  publisher={Springer}
+  publisher={Springer-Verlag}
 }
 
 @article{sauerbrei1999building,
