--- a/vignettes/flexsurv-examples.Rnw
+++ b/vignettes/flexsurv-examples.Rnw
@@ -137,16 +137,18 @@ The expected survival up to time $t$, from a model with cumulative distribution 
 
 An estimate and confidence interval for this, for a specified
 covariate value, can be computed using a custom summary function as
-follows.  (Note that \Rfunction{summary.flexsurvreg} can be
-abbreviated to \Rfunction{summary}).  As in the
-\Rfunction{median.weibull} example in the user guide vignette, the
+follows.  (Note that \code{summary.flexsurvreg} can be
+abbreviated to \code{summary}).  As in the
+\code{median.weibull} example in the user guide vignette, the
 summary function is independent of time, so any value can be specified
-for \Rfunarg{t} in the call to \Rfunction{summary}.  The time horizon
+for \code{t} in the call to \code{summary}.  The time horizon
 up to which to compute the mean is specified by the default value of
-the \Rfunarg{horizon} argument to the custom function.  Here we
-compute the unrestricted mean, with \Rfunarg{horizon=Inf}.
+the \code{horizon} argument to the custom function.  The mean survival
+is computed here up to 100 years.  Setting \code{horizon=Inf} 
+is theoretically also possible for an unrestricted mean, but the integral
+does not converge in this example. 
 <<>>=
-mean.gengamma <- function(mu, sigma, Q, horizon=Inf, ...){
+mean.gengamma <- function(mu, sigma, Q, horizon=100, ...){
     surv <- function(t, ...) {  1 - pgengamma(q=t, mu=mu, sigma=sigma, Q=Q, ...) }
     integrate(surv, 0, horizon, ...)$value
 }
@@ -154,7 +156,7 @@ summary(fs2, newdata=list(group="Good"), t=1, fn=mean.gengamma)
 summary(fs2, newdata=list(group="Medium"), t=1, fn=mean.gengamma)
 summary(fs2, newdata=list(group="Poor"), t=1, fn=mean.gengamma)
 @ 
-Illustrate the median as well, compare to unrestricted mean...
+Note that the (unrestricted) median is more stable, and less than the restricted mean due to the skewness of this distribution. 
 <<>>=
 median.gengamma <- function(mu, sigma, Q) { 
     qgengamma(0.5, mu=mu, sigma=sigma, Q=Q) 
@@ -162,7 +164,7 @@ median.gengamma <- function(mu, sigma, Q) {
 summary(fs2, newdata=list(group="Good"), t=1, fn=median.gengamma)
 @ 
 
-\subsection{Custom summary functions with spline models}                   
+%\subsection{Custom summary functions with spline models}                   
 
 
 \bibliography{flexsurv}
