--- a/vignettes/flexsurv-examples.Rnw
+++ b/vignettes/flexsurv-examples.Rnw
@@ -167,6 +167,42 @@ summary(fs2, newdata=list(group="Good"), t=1, fn=median.gengamma)
 %\subsection{Custom summary functions with spline models}                   
 
 
+\subsection{Spline models}
+
+\subsection{Prognostic model for the breast cancer data}
+
+The regression model III in \citet{sauerbrei1999building} used to
+create the prognostic group from the breast cancer data (supplied as
+\code{bc} in \pkg{flexsurv} and \code{GBSG2} in \pkg{TH.data}) can be
+reproduced as follows.   Firstly, the required fractional polynomial 
+transformations of the covariates are constructed. \code{progc} is the Cox model used by
+\citet{sauerbrei1999building}, and \code{prog3} is a flexible
+fully-parametric alternative, implemented as a spline with three
+internal knots.  The number of knots was chosen to minimise AIC.   
+The covariate effects are very similar. 
+<<>>=
+library(TH.data)
+GBSG2 <- transform(GBSG2,
+                   X1a=(age/50)^-2,
+                   X1b=(age/50)^-0.5,
+                   X4=tgrade %in% c("II","III"),
+                   X5=exp(-0.12*pnodes),
+                   X6=(progrec+1)^0.5
+                   )
+(progc <- coxph(Surv(time, cens) ~ horTh + X1a + X1b + X4 + X5 + X6, data=GBSG2))
+(prog3 <- flexsurvspline(Surv(time, cens) ~ horTh + X1a + X1b + X4 + X5 + X6, k=3, data=GBSG2))
+@
+The prognostic index can then be derived from categorising
+observations in three groups according to the tertiles of the linear predictor in each model. 
+The indices produced by the Cox model (\code{progc}) and the spline-based model (\code{progf}) agree exactly. 
+<<>>=
+predc <- predict(progc, type="lp")
+progc <- cut(predc, quantile(predc, 0:3/3))
+predf <- model.matrix(prog3) %*% prog3$res[-(1:5),"est"]
+progf <- cut(predf, quantile(predf, 0:3/3))
+table(progc, progf)
+@ 
+
 \bibliography{flexsurv}
 
 \end{document} 
